force-app/main/default/objects/Calibration_Run__c/Calibration_Run__c.object-meta.xml
<CustomObject>
    <description>One execution of a golden set against a monitored agent. Operational (Public Read Only).</description>
    <label>Calibration Run</label>
    <nameField>
        <displayFormat>RUN-{000000}</displayFormat>
        <label>Calibration Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calibration Runs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>