force-app/main/default/objects/Calibration_Run__c/fields/Cases_Failed__c.field-meta.xml
<CustomField>
    <fullName>Cases_Failed__c</fullName>
    <label>Cases Failed</label>
    <description>Number of cases that failed at least one assertion in this run.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>