force-app/main/default/objects/Calibration_Run__c/fields/Cases_Passed__c.field-meta.xml
<CustomField>
    <fullName>Cases_Passed__c</fullName>
    <label>Cases Passed</label>
    <description>Number of cases that passed all assertions in this run.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>