force-app/main/default/objects/Calibration_Run__c/fields/Cases_Total__c.field-meta.xml
<CustomField>
    <fullName>Cases_Total__c</fullName>
    <label>Cases Total</label>
    <description>Total number of golden cases evaluated in this run.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>