force-app/main/default/objects/Calibration_Run__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <label>Completed At</label>
    <description>Timestamp the run finished.</description>
    <type>DateTime</type>
</CustomField>