force-app/main/default/objects/Calibration_Run__c/fields/Credits_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Credits_Consumed__c</fullName>
    <label>Credits Consumed</label>
    <description>Total Flex Credits consumed by this run.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>