force-app/main/default/objects/Calibration_Run__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <description>Error detail captured if the run failed or completed partially.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>