force-app/main/default/objects/Calibration_Run__c/fields/Fleet_Agent__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Agent__c</fullName>
    <label>Fleet Agent</label>
    <description>The agent this run calibrated.</description>
    <type>Lookup</type>
    <referenceTo>Fleet_Agent__c</referenceTo>
    <relationshipLabel>Calibration Runs</relationshipLabel>
    <relationshipName>Calibration_Runs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>