force-app/main/default/objects/Calibration_Run__c/fields/Judge_Invocations__c.field-meta.xml
<CustomField>
    <fullName>Judge_Invocations__c</fullName>
    <label>Judge Invocations</label>
    <description>Number of prompt-template judge calls made, i.e. cases in the ambiguous band.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>