force-app/main/default/objects/Calibration_Run__c/fields/Prefilter_Skips__c.field-meta.xml
<CustomField>
    <fullName>Prefilter_Skips__c</fullName>
    <label>Prefilter Skips</label>
    <description>Number of cases resolved by the embedding prefilter without a judge call.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>