force-app/main/default/objects/Calibration_Run__c/fields/Run_Key__c.field-meta.xml
<CustomField>
    <fullName>Run_Key__c</fullName>
    <label>Run Key</label>
    <description>Stable external identifier for this run, unique across the org.</description>
    <type>Text</type>
    <length>80</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>