force-app/main/default/objects/Calibration_Run__c/fields/Trigger_Change_Event__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Change_Event__c</fullName>
    <label>Trigger Change Event</label>
    <description>The change event that triggered this run, when Trigger Source is Change Event.</description>
    <type>Lookup</type>
    <referenceTo>Change_Event__c</referenceTo>
    <relationshipLabel>Triggered Calibration Runs</relationshipLabel>
    <relationshipName>Triggered_Calibration_Runs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>