force-app/main/default/objects/Calibration_Run__c/fields/Trigger_Source__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Source__c</fullName>
    <label>Trigger Source</label>
    <description>What initiated this calibration run.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Change_Event</fullName>
                <label>Change Event</label>
            </value>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>CI_Gate</fullName>
                <label>CI Gate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>