force-app/main/default/objects/Calibration_Run__c/fields/Trueness_Score__c.field-meta.xml
<CustomField>
    <fullName>Trueness_Score__c</fullName>
    <label>Trueness Score</label>
    <description>Aggregate trueness score for this run, 0-100.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>